tests/custom/STARIS_2022/operation-type-errors/in-type-error-02/stderr.expected
Error:
    Parser error in file: in-type-error.essence Error is:
ValidatorError in-type-error.essence:2:25:
  |
2 | such that b = (false in 5)
  |                         ^
Type error:
	Expected:"Container of  bool"
	Got: int

